<?php

namespace App\Service\WechatBot\Exceptions;

class ImageNotFoundException extends \Exception {
    // 自定义异常类，用于处理授权相关的错误
}