@startuml WechatBotClassDiagram

' 定义接口
interface ServiceProviderInterface {
    + performLogin(): void
    + sendMessage()
    + receiveMessage()
}

interface UserInterface {
    + getID()
    + getName()
}

interface FriendsInterface {
    + getFriendList()
}

interface MessageMiddlewareInterface {
    + handle()
}

' 定义异常类
class ConfirmLoginException {
    + getMessage()
}

class ImageNotFoundException {
    + getMessage()
}

' 定义主要类
class WechatBot {
    + ServiceProvider provider
    + initialize()
    + performLogin()
    + sendMessage()
    + receiveMessage()
}

' 定义服务提供者
class ExampleServiceProvider {
    + performLogin()
    + sendMessage()
    + receiveMessage()
}

' 定义服务器
class Server {
    + start()
    + stop()
}

' 定义消息类型接口
interface TextMessage {
    + send()
}

interface ImageMessage {
    + send()
}

' 定义关系
WechatBot --> ServiceProviderInterface : uses >
ExampleServiceProvider ..|> ServiceProviderInterface : implements >
Server --> WechatBot : uses >

' 定义中间件接口
interface GroupMiddlewareInterface {
    + handle()
    + ... 其他方法 ...
}

' 定义中间件关系
MessageMiddlewareInterface <|.. GroupMiddlewareInterface : extends <
MessageMiddlewareInterface <|.. TextMessage : extends <
MessageMiddlewareInterface <|.. ImageMessage : extends <

' 更多类和接口的定义和关系可以根据需要继续添加

@enduml
